--- a/projects/koloni/index.html
+++ b/projects/koloni/index.html
@@ -43,7 +43,7 @@
     }
 
     #topnav{
-      line-height: 1.2em;
+      padding: -5px;
       padding-bottom: 43px;
     }
 
@@ -74,11 +74,11 @@
       font-weight: bold;
     }
 
-    @media screen and (max-width: 421px) {
+  /*  @media screen and (max-width: 421px) {
       #topnav{
         line-height: 2em;
       }
-    }
+    }*/
 
     </style>
   </head>
