--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <body>
     <div id="topnav">
 	<h2 class="nav">Alberto Guillermo <span class="title-block">de la Cruz</span></h2>
-	<h2 class="nav">Product Design Intern at <a href="https://www.artbinder.com/default.aspx">ArtBinder</a></h2>
+	<h2 class="nav">Product Design Intern at <a href="https://www.artbinder.com/default.aspx">ArtBinder</a></span></h2>
 
 	<h3 class="nav"><a href="/resume">Résumé</a></h3>
 	<h3 class="nav"><a href="https://twitter.com/agdelax">Twitter</a></h3>
