--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -47,9 +47,13 @@
       padding-bottom: 43px;
     }
 
+    .navlabel {
+      margin-top: -10px;
+    }
+
     .nav {
       display: inline-block;
-      margin: 0;
+      margin: -10px 0 0 0;
       padding: 0 10px 0 0;
     }
 
