--- a/index.html
+++ b/index.html
@@ -47,13 +47,9 @@
       padding-bottom: 43px;
     }
 
-    .navlabel {
-      margin-top: -24px;
-    }
-
     .nav {
       display: inline-block;
-      margin: -24px 0 0 0;
+      margin: 0;
       padding: 0 10px 0 0;
     }
 
@@ -88,8 +84,8 @@
   </head>
   <body>
     <div id="topnav">
-	<h2 class="navlabel">Alberto Guillermo <span class="title-block">de la Cruz</span></h2>
-	<h2 class="navlabel">Product Design Intern at <a href="https://www.artbinder.com/default.aspx">ArtBinder</a></h2>
+	<h2>Alberto Guillermo <span class="title-block">de la Cruz</span></br>
+	Product Design Intern at <a href="https://www.artbinder.com/default.aspx">ArtBinder</a></h2>
 
 	<h3 class="nav"><a href="/resume">Résumé</a></h3>
 	<h3 class="nav"><a href="https://twitter.com/agdelax">Twitter</a></h3>
