--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -47,13 +47,9 @@
       padding-bottom: 43px;
     }
 
-    .navlabel {
-      margin-top: -24px;
-    }
-
     .nav {
       display: inline-block;
-      margin: -24px 0 0 0;
+      margin: 0;
       padding: 0 10px 0 0;
     }
 
