--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     .nav {
       display: inline-block;
-      margin: 0;
+      margin: 0 -2px 0 -2px;
       padding: 0 10px 0 0;
     }
 
@@ -85,7 +85,7 @@
   <body>
     <div id="topnav">
 	<h2>Alberto Guillermo <span class="title-block">de la Cruz</span></br>
-	Product Design Intern at <a href="https://www.artbinder.com/default.aspx">ArtBinder</a></h2>
+	Product Design Intern <span class="title-block">at <a href="https://www.artbinder.com/default.aspx">ArtBinder</a></span></h2>
 
 	<h3 class="nav"><a href="/resume">Résumé</a></h3>
 	<h3 class="nav"><a href="https://twitter.com/agdelax">Twitter</a></h3>
