--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
 	<h3 class="nav"><a href="/resume">Résumé</a></h3>
 	<h3 class="nav"><a href="https://twitter.com/agdelax">Twitter</a></h3>
 	<h3 class="nav"><a href="https://github.com/AGdelaX">Github</a></h3>
+	<span class="title-block">
 	<h3 class="nav"><a href="http://sblood.tumblr.com/">Tumblr</a></h3>
 	<h3 class="nav"><a href="https://www.linkedin.com/in/agdelax">LinkedIn</a></h3>
+	</span>
 </div>
 <!-- 
 <p>I am a designer and developer from Puerto Rico now studying and working in NYC. Since I am versed in both the creative and technical sides of developing an application, I want to be closely involved with the user experience and implementation of client side interfaces. I am also interested in data visualization and interactive art.</p> -->
