--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <p>In high school I was far from the best student. I was often gripped by fears of failing and would do the bare minimum in order to pass. Going to art school taught me to enjoy learning.</p> -->
 
     <div id="footer">
-      <p style="margin-top:0;">&copy; Alberto Guillermo de la Cruz</span></p>
+      <p style="margin-top:40px;">&copy; Alberto Guillermo de la Cruz</span></p>
     </div>
 
     <script>
