--- a/resume/index.html
+++ b/resume/index.html
@@ -192,7 +192,7 @@
 </div>
 
     <div id="footer">
-      <p style="margin-top:0;">&copy; Alberto Guillermo de la Cruz</span></p>
+      <p style="margin-top:40px;">&copy; Alberto Guillermo de la Cruz</span></p>
     </div>
 
     <script>
