--- a/projects/koloni/index.html
+++ b/projects/koloni/index.html
@@ -110,7 +110,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/koloni/koloni-billboard2.pn
 
 <p>In one of my fall semester classes, I developed the identity for a fictional microfinance app called Koloni. I chose the name after discovering the word ‘colony’ is spelled and pronounced very similarly in over thirty different languages, with ‘koloni’ being the most common form of spelling. The app would function very similarly to Kickstarter, although users receiving money can then set up a payment plan to reimburse lenders.</p>
     <div id="footer">
-      <p style="margin-top:0;">&copy; Alberto Guillermo de la Cruz</span></p>
+      <p style="margin-top:40px;">&copy; Alberto Guillermo de la Cruz</span></p>
     </div>
 
     <script>
