--- a/resume/index.html
+++ b/resume/index.html
@@ -83,8 +83,7 @@
     </style>
   </head>
   <body>
-    <h2><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h2>
-<h3><a href="mailto:agdelax@gmail.com">agdelax@gmail.com</a></h3>
+    <h2><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></br><a href="mailto:agdelax@gmail.com">agdelax@gmail.com</a></h2>
 
 <div class="column">
 <h2>Experience</h2>
