--- a/resume/index.html
+++ b/resume/index.html
@@ -84,7 +84,7 @@
   </head>
   <body>
     <h2><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h2>
-<h3><a href="mailto:agdelax@gmail.com">agdelax@gmail.com</a></h3>
+<h3 style="margin-top:-18px;"><a href="mailto:agdelax@gmail.com">agdelax@gmail.com</a></h3>
 
 <div class="column">
 <h2>Experience</h2>
