--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -25,8 +25,21 @@
     a{
       text-decoration: none;
       color: black;
-      border-bottom: 2px solid #7D26CD;
+/*      border-bottom: 2px solid #7D26CD;*/
       padding-bottom: 0px;
+    }
+
+    a:before{
+      content: "~~~~~~~~~~~~";
+      font-size: 1em;
+      font-weight: 700;
+      font-family: Times New Roman, serif;
+      color: #7D26CD;
+      width: 100%;
+      position: absolute;
+      top: 12px;
+      left: -1px;
+      overflow: hidden;
     }
 
     a:hover{
