--- a/resume/index.html
+++ b/resume/index.html
@@ -26,6 +26,8 @@
       text-decoration: none;
       color: black;
 /*      border-bottom: 2px solid #7D26CD;*/
+      display: inline-block;
+      position: relative;
       padding-bottom: 0px;
     }
 
