--- a/resume/index.html
+++ b/resume/index.html
@@ -32,14 +32,14 @@
     }
 
     a:before{
-      content: "~~~~~~~~~~~~";
+      content: "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~";
       font-size: 2em;
       font-weight: 700;
       font-family: Times New Roman, serif;
       color: #7D26CD;
       width: 100%;
       position: absolute;
-      left: -1px;
+      letter-spacing: -1px;
       overflow: hidden;
     }
 
