--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -25,22 +25,8 @@
     a{
       text-decoration: none;
       color: black;
-/*      border-bottom: 2px solid #7D26CD;*/
-      display: inline-block;
-      position: relative;
+      border-bottom: 2px solid #7D26CD;
       padding-bottom: 0px;
-    }
-
-    a:before{
-      content: "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~";
-      font-size: 2em;
-      font-weight: 700;
-      font-family: Times New Roman, serif;
-      color: #7D26CD;
-      width: 100%;
-      position: absolute;
-      letter-spacing: -2px;
-      overflow: hidden;
     }
 
     a:hover{
