--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <style>
-/*    @import url(https://fonts.googleapis.com/css?family=Lato);
-*/
+
     html {
       font-family: 'Helvetica Neue', sans-serif;
     }
@@ -74,12 +73,6 @@
       font-weight: bold;
     }
 
-  /*  @media screen and (max-width: 421px) {
-      #topnav{
-        line-height: 2em;
-      }
-    }*/
-
     </style>
   </head>
   <body>
@@ -95,14 +88,8 @@
 	<h3 class="nav"><a href="https://www.linkedin.com/in/agdelax">LinkedIn</a></h3>
 	</span>
 </div>
-<!-- 
-<p>I am a designer and developer from Puerto Rico now studying and working in NYC. Since I am versed in both the creative and technical sides of developing an application, I want to be closely involved with the user experience and implementation of client side interfaces. I am also interested in data visualization and interactive art.</p> -->
 
 <p>I am a designer and developer from Puerto Rico now studying and working in NYC. My background lies in User Experience and Visual Design, and I also enjoy coding on the front-end. Right now I'm interning at a tech startup called <a href='https://www.artbinder.com/default.aspx'>ArtBinder</a>, building software for museums and art galleries. Before that, I worked at another startup called <a href='https://aliceapp.com'>Alice</a>, designing apps for hotel guests and backend software for hotel employees. Besides that, I love comics, animation and good beer.</p>
-<!-- 
-<p>Outside of work I am an animation, comics and films buff. I used to study Illustration, but I also strongly considered going to school for Art History. I enjoy drinking craft beer and sake with friends and trying new types of cuisine. You can probably find me spinning in <a href="http://flywheelsports.com">Flywheel's</a> Flatiron location.</p> -->
-
-<!-- <hr> -->
 
 <h2>Projects</h2>
 
@@ -121,32 +108,11 @@
 <p>As a semester-long assignment I designed the screens, branding and marketing of a fictional microfinance app.</p>
 
 <h3><a href="/projects/arroz-blanco">Arroz Blanco</a> (T-Shirt and Sticker Design, Branding)</h3>
-<p>As a summer project, I sought to launch a t-shirt and sticker business and sell the merchandise in Puerto Rico Comic Con. Although the business wasn’t a success, this project is what got me interested in UI/UX Design.</p><!-- <h3><a href="#">CRITlink</a> (Front End Development, UI/UX Design)</h3>
-<p>A light version of InVision’s critiquing system, my goal was to allow users to upload images and be able to send that link to friends to get position based comments on the image. I also played around with jQuery UI to make all the elements on the page draggable. This app was built with ReactJS with Firebase in the back-end.</p> -->
-
-<!-- <hr>
-
-<h2>Writings</h2>
-
-<h3><a href="#">Learning to Code at Bloc</a> (July 19, 2015)</h3>
-<p>A retrospective of my time at Bloc, learning the ins and outs of software engineering. I talk about my expectations when I came into the program and my aspirations for the future after Bloc.</p>
-
-<h3><a href="#">Rekindling My Love of Learning</a> (August 1, 2015)</h3>
-<p>In high school I was far from the best student. I was often gripped by fears of failing and would do the bare minimum in order to pass. Going to art school taught me to enjoy learning.</p> -->
-
+<p>As a summer project, I sought to launch a t-shirt and sticker business and sell the merchandise in Puerto Rico Comic Con. Although the business wasn’t a success, this project is what got me interested in UI/UX Design.</p>
     <div id="footer">
       <p style="margin-top:40px;">&copy; Alberto Guillermo de la Cruz</span></p>
     </div>
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-65309658-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
+   
   </body>
 </html>
