--- a/projects/arithmatic/index.html
+++ b/projects/arithmatic/index.html
@@ -95,6 +95,15 @@
       <p style="margin-top:40px;">&copy; Alberto Guillermo de la Cruz</span></p>
     </div>
 
-   
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-65309658-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
