--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	</span>
 </div>
 
-<p>I am a designer and developer from Puerto Rico now studying and working in NYC. My background lies in User Experience and Visual Design, and I also enjoy coding on the front-end. Right now I'm interning at a tech startup called <a href='https://www.artbinder.com/default.aspx'>ArtBinder</a>, building software for museums and art galleries. Before that, I worked at another startup called <a href='https://aliceapp.com'>Alice</a>, designing apps for hotel guests and backend software for hotel employees. Besides that, I love comics, animation and good beer.</p>
+<p>I am a designer and developer from Puerto Rico now studying and working in NYC. My background lies in User Experience and Visual Design, and I also enjoy coding on the front-end. Right now I'm interning at a tech startup called <a href='https://www.artbinder.com/default.aspx'>ArtBinder</a>, building software for museums and art galleries. Before that, I worked at another startup called <a href='https://aliceapp.com'>Alice</a>, designing apps for hotel guests and backend software for hotel employees. Outside of work, I love comics, video games, animation and good beer.</p>
 
 <h2>Projects</h2>
 
