--- a/resume/index.html
+++ b/resume/index.html
@@ -150,7 +150,7 @@
         <li>Premiere</li>
       </ul>
     <li>Bohemian Sketch</li>
-    <li>HTML5/CSS3/JS</li>
+    <li>HTML/CSS/JS</li>
     <li>Sass</li>
     <li>jQuery</li>
     <li>AngularJS</li>
