--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -73,6 +73,14 @@
       font-weight: bold;
     }
 
+    ::-moz-selection { 
+    background: #7D26CD;
+    }
+
+    ::selection {
+    background: #7D26CD;
+    }
+
     </style>
   </head>
   <body>
