--- a/resume/index.html
+++ b/resume/index.html
@@ -73,6 +73,14 @@
       font-weight: bold;
     }
 
+    ::-moz-selection { 
+    background: #7D26CD;
+    }
+
+    ::selection {
+    background: #7D26CD;
+    }
+
     </style>
   </head>
   <body>
