--- a/projects/koloni/index.html
+++ b/projects/koloni/index.html
@@ -74,10 +74,12 @@
     }
 
     ::-moz-selection { 
+    color: white;
     background: #7D26CD;
     }
 
     ::selection {
+    color: white;
     background: #7D26CD;
     }
 
