--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 <h3><a href="/projects/arithmatic">Arithmatic</a> (UI/UX Design)</h3>
 <p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible where users can compete with one another.</p>
 
-<h3><a href="/projects/koloni">Koloni</a> (UI/UX Design, Branding)</h3>
-<p>As a semester-long assignment I designed the screens, branding and marketing of a fictional microfinance app.</p>
+<!-- <h3><a href="/projects/koloni">Koloni</a> (UI/UX Design, Branding)</h3>
+<p>As a semester-long assignment I designed the screens, branding and marketing of a fictional microfinance app.</p> -->
 
 <h3><a href="/projects/arroz-blanco">Arroz Blanco</a> (T-Shirt and Sticker Design, Branding)</h3>
 <p>As a summer project, I sought to launch a t-shirt and sticker business and sell the merchandise in Puerto Rico Comic Con. Although the business wasn’t a success, this project is what got me interested in UI/UX Design.</p>
