--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>&#10014;</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#7D26CD">
+    <!-- <meta name="theme-color" content="#7D26CD"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <style>
 
@@ -25,7 +25,7 @@
     a{
       text-decoration: none;
       color: black;
-      border-bottom: 2px solid #7D26CD;
+      border-bottom: 2px solid black;
       padding-bottom: 0px;
     }
 
@@ -76,12 +76,12 @@
 
     ::-moz-selection { 
     color: white;
-    background: #7D26CD;
+    background: black;
     }
 
     ::selection {
     color: white;
-    background: #7D26CD;
+    background: black;
     }
 
     </style>
