--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 <h3><a href="https://shining-torch-9429.firebaseapp.com/">Hey Buddy!</a> (Front End Development, UI Design)</h3>
 <p>An early experiment with Angular, I built a real time chat room with Firebase for persistent data. As a joke, I made the UI as obnoxious as possible.</p>
 
-<h3><a href="/projects/arithmatic">Arithmatic</a> (UI/UX Design)</h3>
-<p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible where users can compete with one another.</p>
+<!-- <h3><a href="/projects/arithmatic">Arithmatic</a> (UI/UX Design)</h3>
+<p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible where users can compete with one another.</p> -->
 
 <!-- <h3><a href="/projects/koloni">Koloni</a> (UI/UX Design, Branding)</h3>
 <p>As a semester-long assignment I designed the screens, branding and marketing of a fictional microfinance app.</p> -->
