--- a/resume/index.html
+++ b/resume/index.html
@@ -93,11 +93,21 @@
 <div class="column">
 <h2>Experience</h2>
 
+<h3><a href="http://artbinder.com/">ArtBinder</a>, Product Design Intern</h3>
+<p>Winter 2016 - Present</p>
+  <ul>
+    <li>User Experience</li>
+    <li>User Research</li>
+    <li>Interface Design</li>
+    <li>Web Design</li>
+    <li>Prototyping</li>
+  </ul>
+
 <h3><a href="https://www.aliceapp.com/">Alice App</a>, UI/UX Intern</h3>
 <p>Fall 2014 - Summer 2015</p>
   <ul>
     <li>Interface Design</li>
-    <li>Website Design</li>
+    <li>Web Design</li>
     <li>Prototyping</li>
     <li>User Research</li>
   </ul>
@@ -160,15 +170,11 @@
         <li>After Effects</li>
         <li>Premiere</li>
       </ul>
-    <li>Bohemian Sketch</li>
+    <li>Sketch</li>
     <li>HTML/CSS/JS</li>
     <li>Sass</li>
     <li>jQuery</li>
-    <li>AngularJS</li>
-    <li>ReactJS</li>
-    <li>D3</li>
-    <li>Git Version Control</li>
-    <li>Grunt</li>
+    <li>GitHub</li>
     <li>Googling StackOverflow</li>
   </ul>
 
