--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -112,9 +112,9 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.pn
 
 <p>I was the design lead on this feature, although I received plenty of guidance and help from not only the other employees at Alice but also from other concierge workers in designing a feature they would be delighted in using.</p>
 
-    <div id="footer">
+    <!-- <div id="footer">
       <p style="margin-top:40px;">&copy; Alberto Guillermo de la Cruz</span></p>
-    </div>
+    </div> -->
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
