--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
 
 <h3><a href="/projects/arroz-blanco">Arroz Blanco</a> (T-Shirt and Sticker Design, Branding)</h3>
 <p>As a summer project, I sought to launch a t-shirt and sticker business and sell the merchandise in Puerto Rico Comic Con. Although the business wasn’t a success, this project is what got me interested in UI/UX Design.</p>
-    <div id="footer">
+    <!-- <div id="footer">
       <p style="margin-top:40px;">&copy; Alberto Guillermo de la Cruz</span></p>
-    </div>
+    </div> -->
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
