--- a/projects/arithmatic/index.html
+++ b/projects/arithmatic/index.html
@@ -102,9 +102,9 @@
 </div>
 
 <p>One of the projects I made for my App Design class was a fast-paced mobile game based on arithmetic. The player swipes the equation into the correct answer, before the timer bar at the bottom of the screen runs out. The quicker the answer, the more points are rewarded. Each type of function is associated with its own color, potentially allowing quicker responses by players seeing the color and immediately grasping what type of function they must solve. Players can compete with one another in leaderboards to determine who’s on top.</p>
-    <div id="footer">
+    <!-- <div id="footer">
       <p style="margin-top:40px;">&copy; Alberto Guillermo de la Cruz</span></p>
-    </div>
+    </div> -->
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
