--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -115,9 +115,9 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard
 <p>Last year, out of curiosity I decided to check out the book <a href="http://www.amazon.com/Launch-Kick-Ass-T-Shirt-Brand-ebook/dp/B005D9J252">Launch a Kickass T-Shirt Brand</a>. Inspired by other hispanic T-shirt brands like <a href="http://shop.tripleta.com/">Tripleta</a> and <a href="http://mangobajito.com/">MangoBajito</a>, I decided to give it a shot and that summer I set up a booth in <a href="http://www.prcomiccon.com/">Puerto Rico Comic Con</a> selling t-shirts and stickers I designed.</p>
 
 <p>The designs were inspired by a mix of Puerto Rican and Japanese culture, hence the name Arroz Blanco (since both Japanese and Puerto Rican cuisine have a heavy emphasis on white rice). I also set up a basic website and social media campaign promoting the products. My expectations with the brand weren’t in line with the reality. I wanted to be completely sold out of my product by the end of Comic Con, instead I was able to sell a quarter of my merchandise. I learned from the experience that I didn’t want to get into the t-shirt business, however it was because of this project I first started becoming interested in web design, collaborating with a programmer friend of mine in making the website. In designing the website I started reading up on responsive web design and usability and in the process became interested in user experience.</p>
-    <div id="footer">
+    <!-- <div id="footer">
       <p style="margin-top:40px;">&copy; Alberto Guillermo de la Cruz</span></p>
-    </div>
+    </div> -->
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
