--- a/projects/whitewithred/index.html
+++ b/projects/whitewithred/index.html
@@ -202,9 +202,9 @@
 	</script>
 </body>
 </html>
-    <div id="footer">
+    <!-- <div id="footer">
       <p style="margin-top:40px;">&copy; Alberto Guillermo de la Cruz</span></p>
-    </div>
+    </div> -->
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
