--- a/resume/index.html
+++ b/resume/index.html
@@ -201,9 +201,9 @@
 <p>High School Diploma</p>
 </div>
 
-    <div id="footer">
+    <!-- <div id="footer">
       <p style="margin-top:40px;">&copy; Alberto Guillermo de la Cruz</span></p>
-    </div>
+    </div> -->
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
