--- a/projects/whitewithred/index.html
+++ b/projects/whitewithred/index.html
@@ -97,7 +97,8 @@
 	<style type="text/css">
 	@font-face{
     	font-family: 'Franklin Gothic';
-        src: url('franklingothic-book.otf') format('opentype');
+        src: url('	
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/white-with-red/franklingothic-book.otf') format('opentype');
     }
 	body{
 		background-color: black;
