--- a/projects/whitewithred/index.html
+++ b/projects/whitewithred/index.html
@@ -95,18 +95,14 @@
 	<title>White with Red</title>
 
 	<style type="text/css">
-	@font-face{
-    	font-family: 'Franklin Gothic';
-        src: url('	
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/white-with-red/franklingothic-book.otf') format('opentype');
-    }
+
 	body{
 		background-color: black;
 		text-align: center;
 	}
 	p {
 		color: #ccc;
-		font-family: 'Franklin Gothic', sans-serif;
+		font-family: 'Helvetica Neue', sans-serif;
 		max-width: 500px;
 		margin: auto;
 		line-height: 20px;
