--- a/projects/alice-crm/index.html
+++ b/projects/alice-crm/index.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <style>
 
-    html {
+    /*html {
       font-family: 'Helvetica Neue', sans-serif;
     }
     body {
@@ -83,7 +83,7 @@
     color: white;
     background: black;
     }
-
+*/
     </style>
   </head>
   <body>
