--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -107,7 +107,7 @@
 	}
 
 	.gridblock:hover{
-		background-color: #ffcc00;
+		/*background-color: #ffcc00;*/
 	}
 	h1{
 		font-family: 'Press Start 2P';
