--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -44,7 +44,7 @@
 		width: 100%;
 		height: 100%;
 		position: absolute;
-		background-color: #ffcc00;
+		background-color: #295fff;
 		margin: 0 0 0 -5px;
 		color: white;
 		text-align: center;
@@ -66,7 +66,7 @@
 		position: fixed;
 		left: 5px;
 		top: 0;
-		background-color: #ffcc00;
+		background-color: #295fff;
 		color: white;
 		font-size: 40px;
 		text-align: center;
@@ -97,7 +97,7 @@
 		<div id="close">&times;</div>
 		<h1>divPixels</h1>
 		<h2>A no-fuss HTML pixel editor</h2>
-		<input class="jscolor {onFineChange:'update(this)',closable:true,closeText:'Close me!'}" value="ffcc00">
+		<input class="jscolor {onFineChange:'update(this)',closable:true,closeText:'Close me!'}" value="295fff">
 		<div id="checkdiv">
 			<input type="checkbox" id="myCheck" checked><p id='gridlabel'>Gridlines</p>
 		</div>
