--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -120,7 +120,7 @@
 		var grid = width*height;
 		console.log(grid);
 
-		var currentColor = "#ffcc00";
+		var currentColor = "#295fff";
 
 		$('head').append("<style>.gridblock:hover{background-color:#ffcc00;}</style>");
 
