--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -122,7 +122,7 @@
 
 		var currentColor = "#295fff";
 
-		$('head').append("<style>.gridblock:hover{background-color:#ffcc00;}</style>");
+		$('head').append("<style>.gridblock:hover{background-color:#295fff;}</style>");
 
 		function update(picker) {
     		currentColor = picker.toHEXString();
