--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,29 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h2><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h2>
+    <head>
+  <style type="text/css">
+  body{
+    font-family: sans-serif;
+    max-width: 500px;
+    margin: auto;
+  }
+  #topnav{
+    display: inline-block;
+  }
+
+  a{
+    text-decoration: none;
+    color: black;
+    border-bottom: 1px solid black;
+    padding: 0;
+  }
+  a:hover{
+    padding-bottom: 3px;
+  }
+  </style>
+</head>
+<h2><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h2>
 <h3 style="margin-top:-18px;"><a href="mailto:agdelax@gmail.com">agdelax@gmail.com</a></h3>
 
 <div class="column">
