--- a/index.html
+++ b/index.html
@@ -4,39 +4,27 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div id="topnav">
-	<h2>Alberto Guillermo <span class="title-block">de la Cruz</span></br>
-	Product Design Intern <span class="title-block">at <a href="https://www.artbinder.com/default.aspx">ArtBinder</a></span></h2>
-
-	<h3 class="nav"><a href="/resume">Résumé</a></h3>
-	<h3 class="nav"><a href="https://twitter.com/agdelax">Twitter</a></h3>
-	<h3 class="nav"><a href="https://github.com/AGdelaX">Github</a></h3>
-	<span class="title-block">
-	<h3 class="nav"><a href="http://sblood.tumblr.com/">Tumblr</a></h3>
-	<h3 class="nav"><a href="https://www.linkedin.com/in/agdelax">LinkedIn</a></h3>
-	</span>
-</div>
-
-<p>I am a designer and developer from Puerto Rico now studying and working in NYC. My background lies in User Experience and Visual Design, and I also enjoy coding on the front-end. Right now I'm interning at a tech startup called <a href='https://www.artbinder.com/default.aspx'>ArtBinder</a>, building software for museums and art galleries. Before that, I worked at another startup called <a href='https://aliceapp.com'>Alice</a>, designing apps for hotel guests and backend software for hotel employees. Outside of work, I love comics, video games, animation and good beer.</p>
-
-<h2>Projects</h2>
-
-<p><a href="http://bl.ocks.org/AGdelaX">Check out my gists!</a></p>
-
-<h3><a href="http://bl.ocks.org/AGdelaX/5f3982201cfff21e631d">NYC Vehicle Collisions 2014</a> (Front End Development, UI Design)</h3>
-<p>An interactive map of NYC showing plotting vehicles collisions by victim type, time and location. It's a very large data file so it may take a minute or two to load. Built with D3 and Leaflet.</p>
-
-<h3><a href="https://shining-torch-9429.firebaseapp.com/">Hey Buddy!</a> (Front End Development, UI Design)</h3>
-<p>An early experiment with Angular, I built a real time chat room with Firebase for persistent data. As a joke, I made the UI as obnoxious as possible.</p>
-
-<!-- <h3><a href="/projects/arithmatic">Arithmatic</a> (UI/UX Design)</h3>
-<p>Designed for my App Design class, Arithmatic is a fast paced, mobile game in which players solve arithmetic problems as quickly as possible where users can compete with one another.</p> -->
-
-<!-- <h3><a href="/projects/koloni">Koloni</a> (UI/UX Design, Branding)</h3>
-<p>As a semester-long assignment I designed the screens, branding and marketing of a fictional microfinance app.</p> -->
-
-<h3><a href="/projects/arroz-blanco">Arroz Blanco</a> (T-Shirt and Sticker Design, Branding)</h3>
-<p>As a summer project, I sought to launch a t-shirt and sticker business and sell the merchandise in Puerto Rico Comic Con. Although the business wasn’t a success, this project is what got me interested in UI/UX Design.</p>
+    <head>
+<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+	<style type="text/css">
+	body{
+		text-align: center;
+		max-width: 500px;
+		background-color: #212121;
+		color: white;
+		font-family: 'Inconsolata';
+	}
+	img{
+		width: 30px;
+	}
+	p{
+		align: justify;
+	}
+	</style>
+</head>
+<img src="	
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg">
+<p>Hello! My name's Alberto Guillermo de la Cruz. I'm a designer from Puerto Rico now living in NYC. I'm also the creator of <a href="http://playarithmatic.com">Arithmatic</a>. If you ever want to chat you can reach me by <a href="mailto:agdelax@gmail.com"></a> and <a href="http://twitter.com/agdelax">Twitter. Cheers!</a></p>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
