--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 		line-height: 40px;
 	}
 	img{
-		width: 100px;
+		width: 80px;
 		left: 50%;
+		position: absolute;
 	}
 	p{
 		font-size: 30px;
