--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 		border-bottom: 2px solid white;
 	}
 	a:hover{
-		padding-bottom: 30px;
+		padding-bottom: 3px;
+		transition: all 1s;
 	}
 	</style>
 </head>
