--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <head>
+<title>Alberto Guillermo de la Cruz</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 <meta name="theme-color" content="#000000" />
