--- a/arithmatic/index.html
+++ b/arithmatic/index.html
@@ -21,6 +21,10 @@
 		color: white;
 		text-decoration: none;
 	}
+	a:hover{
+		color: #212121;
+		transition: all 0.5s;
+	}
 	#left{
 		height: 100%;
 		width: 50%;
