--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg">
 <p>Hello! My name's Alberto Guillermo de la Cruz. I'm a designer from Puerto Rico now living in NYC. I'm also the creator of <a href="http://playarithmatic.com">Arithmatic</a>. If you ever want to chat you can reach me by <a href="mailto:agdelax@gmail.com">e-mail</a> and <a href="http://twitter.com/agdelax">Twitter</a>.</p>
 
-<p>Projects <span class="smalltext"><a href="http://bl.ocks.org/AGdelaX">Check out my gists</a></span></p
+<p>Projects <span class="smalltext"><a href="http://bl.ocks.org/AGdelaX">Check out my gists</a></span></p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic.png" class="heroimage">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/divpixel.png" class="heroimage">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/wwr.png" class="heroimage">
