--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
 	.smalltext{
 		font-size: 18px;
 		color: #d3d3d3;
-		line-height: 20px;
 	}
 	.heroimage{
 		max-width: 100%;
 		max-height: 100%;
 		width: auto;
 		height: auto;
+	}
+	.description{
+		line-height: 20px;
 	}
 	</style>
 </head>
@@ -58,13 +60,13 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg">
 
 <p>Projects <span class="smalltext"><a href="http://bl.ocks.org/AGdelaX">Check out my gists</a></span></p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic.png" class="heroimage">
-<p>Arithmatic <span class="smalltext">An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</span></p>
+<p class="description">Arithmatic <span class="smalltext">An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</span></p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/divpixel.png" class="heroimage">
-<p>divPixels <span class="smalltext">A free to use, browser-based pixel art tool for quickly developing pixel drawings.</span></p>
+<p class="description">divPixels <span class="smalltext">A free to use, browser-based pixel art tool for quickly developing pixel drawings.</span></p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/wwr.png" class="heroimage">
-<p>White with Red <span class="smalltext">An interactive horror story based on the short horror story of the same name.</span></p>
+<p class="description">White with Red <span class="smalltext">An interactive horror story based on the short horror story of the same name.</span></p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/nyc-map.png" class="heroimage">
-<p>NYC Collisions 2014 <span class="smalltext">An interactive map of NYC showing vehicle collisions and the type of injuries in 2014.</span></p>
+<p class="description">NYC Collisions 2014 <span class="smalltext">An interactive map of NYC showing vehicle collisions and the type of injuries in 2014.</span></p>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
