--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -44,12 +44,6 @@
 		text-align: center;
 	}
 	#screen{
-		display: flex;
-		display: -webkit-flex;
-		justify-content: center;
-		-webkit-justify-content: center;
-		align-items: center;
-		-webkit-align-items: center;
 		z-index: 100;
 		width: 100%;
 		height: 100%;
@@ -59,6 +53,18 @@
 		color: white;
 		text-align: center;
 		display: none;
+	}
+	#menucontent{
+		display: flex;
+		display: -webkit-flex;
+		justify-content: center;
+		-webkit-justify-content: center;
+		align-items: center;
+		-webkit-align-items: center;
+		padding: 0;
+		position: absolute;
+		width: 100%;
+		height: 100%;
 	}
 	#close{
 		height: 50px;
@@ -95,6 +101,9 @@
 	#checkdiv{
 		margin: 20px 0 -10px 0;
 	}
+	#face{
+		height: 20px;
+	}
 	a{
 		color: white;
 	}
@@ -105,14 +114,17 @@
 	<div id="menu"><p id="menu-icon">&#9776;</p></div>
 	<div id="screen">
 		<div id="close">&times;</div>
-		<h1>divPixels</h1>
-		<h2>A no-fuss HTML pixel editor</h2>
-		<input class="jscolor {onFineChange:'update(this)',closable:true,closeText:'Close me!'}" value="ffcc00">
-		<div id="checkdiv">
-			<input type="checkbox" id="myCheck" checked><p id='gridlabel'>Gridlines</p>
+		<div id="menucontent">
+			<h1>divPixels</h1>
+			<h2>A no-fuss HTML pixel editor</h2>
+			<input class="jscolor {onFineChange:'update(this)',closable:true,closeText:'Close me!'}" value="ffcc00">
+			<div id="checkdiv">
+				<input type="checkbox" id="myCheck" checked><p id='gridlabel'>Gridlines</p>
+			</div>
+			<h3>Built in a weekend by</h3>
+			<a href="http://albertogui.com"><img id= "face" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
+			<p>Color picker by <a href="http://jscolor.com">jscolor</a>	</p>
 		</div>
-		<h3>Built in a weekend by</br><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h3>
-		<p>Color picker by <a href="http://jscolor.com">jscolor</a></p>
 	</div>
 
 	<script type="text/javascript">
