--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
 	}
 
 	.container{
-		top: 50%;
+		display: flex;
+		display: -webkit-flex;
+		justify-content: center;
+		-webkit-justify-content: center;
+		align-items: center;
+		-webkit-align-items: center;
 		padding: 0;
 		position: absolute;
 		width: 100%;
