--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -18,6 +18,7 @@
 		display: block;
 		position: absolute;
 		font-family: 'Helvetica Neue';
+		overflow: hidden;
 	}
 	.gridblock{
 		cursor: pointer;
@@ -56,10 +57,13 @@
 	}
 	#menucontent{
 		top: 50%;
+		left: 50%;
 		padding: 0;
 		position: absolute;
 		width: 100%;
 		height: 100%;
+		margin-top: -50%;
+		margin-left: -50%;
 	}
 	#close{
 		height: 50px;
@@ -97,7 +101,7 @@
 		margin: 20px 0 -10px 0;
 	}
 	#face{
-		height: 20px;
+		height: 200px;
 	}
 	a{
 		color: white;
