--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -158,7 +158,7 @@
 			var square = document.createElement('div');
 			square.style.height = "15px";
 			square.style.width = "15px";
-			square.style.border = "1px solid #ff6016";
+			square.style.border = "1px solid " + currentColor;
 			square.style.margin = "0";
 			square.style.padding = "0";
 			square.style.float = "left";
