--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -45,18 +45,18 @@
 		text-align: center;
 	}
 	#screen{
-		text-shadow:
+		/*text-shadow:
     -1px -1px 0 #fff,
     1px -1px 0 #fff,
     -1px 1px 0 #fff,
-    1px 1px 0 #fff;
+    1px 1px 0 #fff;*/
 		z-index: 100;
 		width: 100%;
 		height: 100%;
 		position: absolute;
 		background-color: #ff6016;
 		margin: 0 0 0 -5px;
-		color: black;
+		color: white;
 		text-align: center;
 		display: none;
 	}
