--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 		}
 		.nav{
 			display: none;
+			text-align: right;
 		}
 		.dash{
 			display: none;
@@ -284,7 +285,7 @@
 		});
 
 		if(navigator.userAgent.match(/iPhone/i)) {
-   		document.getElementById('links').style.fontSize = "4.5vmin";
+   		document.getElementById('links').style.fontSize = "4.3vmin";
 		}
 
 		$('#name').circleType();
