--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
 		-moz-transform: translate(-45%, -50%);
 		-ms-transform: translate(-45%, -50%);
 		-o-transform: translate(-45%, -50%);
+		transition: all .5s;
+		z-index: 21;
 	}
 	#facedown{
 		top: 1em;
@@ -153,6 +155,7 @@
 		position: fixed;
 		max-width: 3em;
 		z-index: 21;
+		transition: all .5s;
 	}
 	#scroll-down{
 		position: absolute;
