--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -17,6 +17,9 @@
     .img-container{
       max-width: 750px;
     }
+    img{
+      width: 100%;
+    }
     #linksdown{
     position: fixed;
     top: 0.5em;
