--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -53,6 +53,17 @@
     z-index: 21;
   }
 
+  .nav{
+    display: inline-block;
+    padding: 0;
+    margin-left: -6px;
+  }
+  .dash{
+    display: inline-block;
+    padding: 0;
+    margin-left: -6px;
+  }
+
   @media (max-width: 700px){
     #menubutton{
       display: inline-block;
