--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -25,6 +25,18 @@
     img{
       width: 100%;
     }
+
+    .contentlinks{
+    text-transform: none;
+    padding-bottom: 1px;
+    border-bottom: 2px solid black;
+  }
+  .contentlinks:hover{
+    padding-bottom: 4px;
+    transition: all 0.3s;
+    color: black;
+  }
+  
     #linksdown{
     position: fixed;
     top: 0.5em;
