--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -36,7 +36,7 @@
     transition: all 0.3s;
     color: black;
   }
-  
+
     #linksdown{
     position: fixed;
     top: 0.5em;
@@ -74,6 +74,10 @@
     display: inline-block;
     padding: 0;
     margin-left: -6px;
+  }
+
+  #menubutton{
+    display: none;
   }
 
   @media (max-width: 700px){
