--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -26,16 +26,25 @@
       width: 100%;
     }
 
+    a{
+    text-decoration: none;
+    color: #212121;
+    text-transform: uppercase;
+    }
+    a:hover{
+    color: gray;
+    }
+
     .contentlinks{
     text-transform: none;
     padding-bottom: 1px;
     border-bottom: 2px solid black;
-  }
-  .contentlinks:hover{
+    }
+    .contentlinks:hover{
     padding-bottom: 4px;
     transition: all 0.3s;
     color: black;
-  }
+    }
 
     #linksdown{
     position: fixed;
@@ -47,7 +56,7 @@
     max-width: 700px;
     }
 
-  #navbar{
+    #navbar{
     height: 6.5em;
     position: fixed;
     top: 0;
@@ -56,14 +65,14 @@
     background-color: white;
     z-index: 20;
     border-bottom: solid black 2px;
-  }
-  #facedown{
+    }
+    #facedown{
     top: 1em;
     left: 1.3em;
     position: fixed;
     max-width: 3em;
     z-index: 21;
-  }
+    }
 
   .nav{
     display: inline-block;
