--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -15,6 +15,7 @@
     font-family: 'Helvetica Neue', sans-serif;
   }
     .img-container{
+      position: relative;
       max-width: 750px;
       margin: auto;
       font-size: 1.5em;
