--- a/projects/arroz-blanco/index.html
+++ b/projects/arroz-blanco/index.html
@@ -117,7 +117,7 @@
 </head>
 <body>
       <div id="navbar"></div>
-      <img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg">
+      <a href="http://albertogui.com"><img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
       <div id="linksdown">
         <p id="menubutton"><a class="contentlinks">Menu</a></p>
         <div id="navbox">
