--- a/index.html
+++ b/index.html
@@ -211,9 +211,6 @@
     <h1 id="name">Designer &mdash; Alberto Guillermo de la Cruz &mdash;&nbsp;</h1>
       <h2 id="links">Dribbble &mdash; Twitter &mdash; Github &mdash; LinkedIn &mdash; Medium &mdash; Email &mdash;&nbsp;</h2>
 
-      <!-- AFTER SCROLLING DOWN -->
-     <!--  <p id="linksdown"><a class="contentlinks" href="https://dribbble.com/albertosoft">Dribbble</a>&mdash;<a class="contentlinks" href="http://twitter.com/agdelax">Twitter</a>&mdash;<a class="contentlinks" href="http://github.com/agdelax">Github</a>&mdash;<a class="contentlinks" href="http://linkedin.com/in/agdelax">LinkedIn</a>&mdash;<a class="contentlinks" href="https://medium.com/@albertodelacruz">Medium</a>&mdash;<a class="contentlinks" href="mailto:agdelax@gmail.com">Email</a></p> -->
-
       <div id="linksdown">
       	<p id="menubutton"><a class="contentlinks">Menu</a></p>
       	<div id="navbox">
@@ -240,6 +237,7 @@
 		<p><a class="contentlinks" href="http://playarithmatic.com">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
 		<p><a class="contentlinks" href="http://albertogui.com/projects/divpixels/">divPixels</a>&mdash;A free to use, browser-based pixel art tool for quickly developing pixel drawings.</p>
 		<p><a class="contentlinks" href="http://albertogui.com/projects/whitewithred/">White with Red</a>&mdash;A series of illustrations and web animations based on the short horror story of the same name.</p>
+		<p><a class="contentlinks" href="http://albertogui.com/projects/arroz-blanco/">Arroz Blanco</a>&mdash;A t-shirt and sticker line I developed and sold in Puerto Rico Comic Con. The designs were inspired by geeky imagery and Puerto Rican culture.</p>
 
 	</div>
 
